Adding new field before assessment

--- a/src/app/forms/form-1-edit.component.html
+++ b/src/app/forms/form-1-edit.component.html
@@ -634,6 +634,10 @@
                 <textarea class="form-control" rows="3" name="q270" [(ngModel)]="form.questions[270].answer"></textarea>
             </div>
 
+            <div class="form-group">
+                <textarea class="form-control" rows="3" name="q349" [(ngModel)]="form.questions[349].answer"></textarea>
+            </div>
+
             <label class="subHeader">ASSESSMENT</label>
 
             <div class="checkbox">
