--- a/src/app/forms/form-2-edit.component.html
+++ b/src/app/forms/form-2-edit.component.html
@@ -595,6 +595,10 @@
                 <textarea class="form-control" rows="3" name="q253" [(ngModel)]="form.questions[253].answer"></textarea>
             </div>
 
+            <div class="form-group">
+                <textarea class="form-control" rows="3" name="q358" [(ngModel)]="form.questions[358].answer"></textarea>
+            </div>
+
             <label class="subHeader">ASSESSMENT</label>
 
             <div class="checkbox">
