--- a/src/app/forms/form-3-edit.component.html
+++ b/src/app/forms/form-3-edit.component.html
@@ -1020,6 +1020,10 @@
                 [(ngModel)]="form.questions[396].answer"></textarea>
             </div>
 
+            <div class="form-group">
+                <textarea class="form-control" rows="3" name="q524" [(ngModel)]="form.questions[524].answer"></textarea>
+            </div>
+
             <label class="subHeader">ASSESSMENT</label>
 
             <div class="checkbox">
