--- a/src/app/forms/form-4-edit.component.html
+++ b/src/app/forms/form-4-edit.component.html
@@ -566,6 +566,10 @@
             <textarea class="form-control" rows="3" name="q387" [(ngModel)]="form.questions[387].answer"></textarea>
         </div>
 
+        <div class="form-group">
+            <textarea class="form-control" rows="3" name="q445" [(ngModel)]="form.questions[445].answer"></textarea>
+        </div>
+
         <label class="subHeader">ASSESSMENT</label>
 
         <div class="checkbox">
